Use password values from the constant folder + changed the name of the isAuthorized function + Remove :/id from the change-password endpoint
