# src/swagger/swagger.json
@@ -495,16 +495,10 @@
         }
       }
     },
-    "/api/auth/{userId}/change-password": {
+    "/api/auth/change-password": {
       "put": {
         "description": "",
         "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
           {
             "name": "body",
             "in": "body",
